[package]
name = "tunl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "schema_generator"
path = "src/schema_generator.rs"

[dependencies]
tokio = { version = "1.45.1", features = ["io-util", "rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
getrandom = { version = "0.2.16", features = ["js"] }
worker = "0.6.0"
cidr = { version = "0.3.1", features = ["serde"] }
lazy_static = "1.4"
futures-util = "0.3"
pin-project-lite = "0.2"
uuid = { version = "1.17.0", features = ["serde"] }
bytes = "1.10"
aes-gcm = "0.10"
aes = "0.8"
sha2 = "0.10.9"
md-5 = "0.10"
toml = "0.8.23"
fastrand = "2"
async-trait = "0.1"
schemars = { version = "1.0.1", features = ["uuid1"] }
bincode = "2"
reqwest = "0.12.20"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
